03-k8-ingress/manifests/payments-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payments-service
spec:
  selector:
    app: payments
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
